First commited as before_58212_rev2